css/style.css
/* Re-define basic styles that were cleared by the reset.css.
This ensures that formatting is consistent across browsers. */
.header {
  padding: 40px;
  text-align: center;
  background: #7393B3;
  color: white;
  font-size: 25px;
}

header.page-header > h1 {
    font: bold calc(1em + 2 * (100vw - 120px) / 100) 'Dancing Script', cursive,
        fantasy;
    margin: 2%;
}
body {font: 12pt "Avenir", "Helvetica", "Arial", sans-serif;color: #000000}
h1 { font-size: 4em; color: #FFFFFF; text-align: center;}
h2 { font-size: 1.5em; color: #FFFFFF; text-align: center;}
h3 { font-size: 1.17em; text-align: center; color: #000000}
h4 { font: 12pt "Avenir"; color:#FFFFFF}
h5 { font: 12pt "Avenir"; color:#000000; text-align: center;}
h6 { font: 16pt "Avenir"; color:#000000; text-align: center;}
h1, h2, h3, h4, h6 { font-weight: bold;}
h1, h2, h3, h4, p, ol, ul, caption {
    margin-block-start: 0.25em;
    margin-block-end: 0.25em;
}
ol, ul { padding-left: 2em; }
ol { list-style-type: decimal; }
ul { list-style-type: disc; }
pre {font-family: 'Avenir', Courier, monospace; color: #FFFFFF}

:root {
    /* Can define CSS variables here, e.g. for common colours. */
    --lightgrey: #DDD;
    --blue: #1569C7;
    --yellow: #f5d428;
    --bluegrey: #7393B3;
    --shadow1: 0 4px 8px 0px rgba(0, 0, 0, 0.5);
    --shadow2: 0 8px 16px 0px rgba(0, 0, 0, 0.5);
}

.hidden { display: none; }

body {background-color: var(--white);}

header, main, footer {
    padding: 8px;
}

/*
Header
Contains title, explanatory text and checkboxes for tags.
*/

#tagselector {
    color: black;
    margin-top: 2em;
}

#tagselector ul {padding-left: 0;}

#tagselector ul li {
    display: inline;
    padding-right: 1em;
}

@media screen and (max-width: 480px) {
    #tagselector ul li {
        display: list-item;
        list-style-type: none;
        padding: 0.35em 0;
    }
    .dropdown-host .icon { margin-left: 0.5em; }
    #Ableism ~ .dropdown-host .dropdown, #Classism ~ .dropdown-host .dropdown { right: -8em; }
}

.dropdown-host {
    position: relative;
    display: inline;
}

.dropdown-host .icon {
    padding: 0 0.3em;
    font: bold 0.8em sans-serif;
    border-radius: 50%;
    border: 0;
    background: #cccccc;
    color: var(#FFF);
}

.dropdown-host .dropdown {
    display: none;
    position: absolute;
    right: -2em;
    width: 12em;
    padding: 0 0.25em;
    background-color: var(--lightgrey);
    color: black;
    box-shadow: var(--shadow1);
    border: 1px solid black;
    z-index: 1;
}
.dropdown-host:hover .dropdown {display: block;}

/*
Main
Contains cards with submitted letters.
*/

main {
    column-width: 24em;
    column-count: 3;
    padding: 1em 0;
}
/* Solid border */
hr.solid {
  border-top: 2px solid #C5C5C5;
}
.card-wrapper {
    break-inside: avoid; /* in multi-column contexts */
    box-sizing: border-box;
    padding: 1.5em 0.75em;
}

.card {
    padding: 20px;
    background-color: var(--lightgrey);
    box-shadow: var(--shadow1);
    transition: 0.25s;
}

.card:hover { box-shadow: var(--shadow2); }

.card h3 { margin-bottom: 1em; }

.card .tags {
    text-align: right;
    margin-top: 0.5em;
    font-size: 0.8em;
}

.showmore {
    padding-left: 1em;
    text-decoration: underline;
    font-size: 0.8em;
    cursor: pointer;
}

.showmore::after { content: "Show more »"; }

.showless {
    padding-left: 1em;
    text-decoration: underline;
    font-size: 0.8em;
    cursor: pointer;
}

.showless::after { content: "« Show less"; }

